--- a/BlogNet/Views/_ViewImports.cshtml
+++ b/BlogNet/Views/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using BlogNet.Models
 @using BlogNet.Data.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-S
+@addTagHelper *, BlogNet
