--- a/BlogNet/Views/Home/Index.cshtml
+++ b/BlogNet/Views/Home/Index.cshtml
@@ -1,6 +1,18 @@
 ﻿@model HomeViewModel
-@{ 
-    ViewData["Title"] = "Home Page"; 
+@{ ViewData["Title"] = "Home Page"; }
+
+@if (Model.Category != null)
+{
+    <div class="card mb-2 bg-light">
+        <h5 class="card-body mb-0">Posts in the Category <em>&quot;@Model.Category.Name&quot;</em></h5>
+    </div>
+}
+
+@if (Model.SearchCriteria != null)
+{
+    <div class="card mb-2 bg-light">
+        <h5 class="card-body mb-0">Search results for the Keyword <em>&quot;@Model.SearchCriteria&quot;</em></h5>
+    </div>
 }
 
 @foreach (Post post in Model.Posts)
@@ -18,34 +30,30 @@
 }
 
 <!-- Pagination-->
-@{ var pi = Model.PaginationInfo; var slug = ViewBag.Slug; }
+@{ var pi = Model.PaginationInfo; var slug = ViewBag.Slug; var q = Model.SearchCriteria; }
 <nav aria-label="Pagination">
     <hr class="my-0" />
-
     <ul class="pagination justify-content-center mt-4 mb-2">
         <li class="page-item @(pi.HasNewer ? "" : "disabled")">
-            <a class="page-link" asp-route-pageNumber="@(pi.CurrentPage - 1)" asp-route-slug="@slug">Newer</a>
+            <a class="page-link" asp-route-pageNumber="@(pi.CurrentPage - 1)" asp-route-slug="@slug" asp-route-q="@q">Newer</a>
         </li>
-
         @foreach (int i in pi.PageNumbers())
         {
             <li class="page-item @(pi.CurrentPage == i ? "active" : "") @(i == -1 ? "disabled": "")">
                 @if (i != -1)
                 {
-                    <a class="page-link" asp-route-slug="@slug" asp-route-pageNumber="@i">@i</a> 
+                    <a class="page-link" asp-route-slug="@slug" asp-route-pageNumber="@i" asp-route-q="@q">@i</a> 
                 }
                 else
                 {
-                    <a class="page-link" href="#">...</a>
+                    <a class="page-link" href="#">...</a>                
                 }
             </li>
         }
-
         <li class="page-item @(pi.HasOlder ? "" : "disabled")">
-            <a class="page-link" asp-route-pageNumber="@(pi.CurrentPage + 1)" asp-route-slug="@slug">Older</a>
+            <a class="page-link" asp-route-pageNumber="@(pi.CurrentPage + 1)" asp-route-slug="@slug" asp-route-q="@q">Older</a>
         </li>
     </ul>
-
     <p class="text-center mb-4 mt-1 small text-muted">
         (Displaying @pi.ResultsStart-@pi.ResultsEnd of @pi.TotalItems posts)
     </p>
